feat: Update middleware error
